# RelayMD

./: .dockerignore  .gitignore  404.html  AGENTS.md  CONTEXT.md  Dockerfile  Dockerfile.base  Dockerfile.orchestrator  Dockerfile.orchestrator-base  Dockerfile.worker  Dockerfile.worker-atom-openmm-base  Dockerfile.worker-base  Dockerfile.worker-gcncmcmd-base  INSTALL  Makefile  PLAN.md  README.md  TODO.md  alembic.ini  architecture-and-design.md  cleanup_plan.md  conftest.py  index.html  mkdocs.yml  pyproject.toml  relaymd-cli.spec  relaymd-config.example.yaml  relaymd.spec  response.md  sitemap.xml  stack-and-implementation.md
.githooks/: pre-commit  pre-push
.github/workflows/: build-base.yml  build-cli.yml  build-worker.yml  ci.yml  deploy-docs.yml  release-cli.yml
PLAN_details/: index.html
adr/0001-backend-runtime-metrics/: index.html
adr/0002-preserved-resume-output-history/: index.html
adr/0003-planned-worker-handoff/: index.html
adr/0004-worker-failure-artifacts/: index.html
adr/0005-worker-image-profiles/: index.html
alembic/: env.py
alembic/versions/: 4a5b0a6d8c12_add_job_affinity_comment_block_reason.py  51c343ab81c6_initial_schema.py  9a6f9f5f8d21_add_cluster_provisioning_state.py  a1b2c3d4e5f6_worker_add_status_rename_slurm_job_id.py  f8da36c3c972_initial_schema.py  head_add_job_lifecycle_fields.py
api-schema/: index.html
architecture/: index.html
cli/: index.html
cli-internals/: index.html
deploy/: config.example.yaml
deploy/hpc/: README.md  install-service-layout.sh  relaymd  relaymd-module-smoke-check  relaymd-service-lib.sh  relaymd-service-proxy  relaymd-service-pull  relaymd-service-status  relaymd-service-supervise  relaymd-service-up  relaymd-service.env.example
deploy/salad/: README.md
deploy/slurm/: README.md  clusters.example.toml  job.sbatch.j2  test_tailscale.sbatch
deploy/systemd/: relaymd-orchestrator.service
deploy/tmux/: start-dashboard-proxy.sh  start-orchestrator.sh
deployment/: index.html
docs/: PLAN_details.md  api-schema.md  architecture.md  cli-internals.md  cli.md  deployment.md  e2e-test-report-167c.md  e2e-test-report.md  hpc-notes.md  index.md  infra.md  job-lifecycle.md  orchestrator-internals.md  scheduling.md  secrets.md  slurm-failure-classification-and-requeue.md  storage-internals.md  storage-layout.md  tech-stack.md  worker-internals.md
docs/adr/: 0001-backend-runtime-metrics.md  0002-preserved-resume-output-history.md  0003-planned-worker-handoff.md  0004-worker-failure-artifacts.md  0005-worker-image-profiles.md
docs/investigations/: job-25767070-checkpoint-investigation.md  workers-per-gpu-bundle-resume-investigation.md
docs/plans/: 001-backend-runtime-metrics-migration.md  002-preserved-resume-output-history.md  003-planned-worker-handoff.md  004-worker-failure-artifacts.md  005-multiple-worker-images.md
e2e-test-report/: index.html
e2e-test-report-167c/: index.html
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.test.tsx  App.tsx  api.test.ts  api.ts  format.test.ts  format.ts  storage.test.ts  storage.ts  styles.css  types.ts  workerImages.test.ts  workerImages.ts
hpc-notes/: index.html
images/gcncmcmd/: grand.source  openmm.yml
infra/: index.html
investigations/job-25767070-checkpoint-investigation/: index.html
investigations/workers-per-gpu-bundle-resume-investigation/: index.html
job-lifecycle/: index.html
orchestrator-internals/: index.html
plans/001-backend-runtime-metrics-migration/: index.html
plans/002-preserved-resume-output-history/: index.html
plans/003-planned-worker-handoff/: index.html
plans/004-worker-failure-artifacts/: index.html
plans/005-multiple-worker-images/: index.html
scheduling/: index.html
scripts/: build_cli_binary.sh  check_infisical_secrets.py  generate_api_client.sh  local_activate_bind_mount.sh  local_build_from_def.sh  local_build_images.sh  local_build_sif_or_sandbox.sh  local_install_cli.sh  local_smoke.sh  release_cli.sh  sync_workspace.sh
search/: search_index.json
secrets/: index.html
slurm-failure-classification-and-requeue/: index.html
src/relaymd/: __init__.py  _version.py  dashboard_proxy.py  dashboard_proxy_main.py  secret_management.py  settings_sources.py
storage-internals/: index.html
storage-layout/: index.html
tech-stack/: index.html
test/: e2e-test-report-167b.md  submit-sleep-5m.sh
test/.streamlit/: config.toml
test/checkpoint-handoff/: README.md  run.sh
test/checkpoint-test/: README.md  relaymd-worker.json  run.sh
test/sleep-5m/: README.md  relaymd-worker.json  run.sh
tests/: test_ci_worker_image_workflow.py  test_dashboard_proxy.py  test_dashboard_proxy_main.py  test_secret_management.py  test_settings_sources.py
tests/cli/: _services_test_helpers.py  test_build_cli_binary_script.py  test_config.py  test_context.py  test_diagnostics.py  test_jobs_commands.py  test_jobs_export.py  test_local_dev_scripts.py  test_monitor.py  test_remote_dispatch.py  test_runtime_paths.py  test_service_commands.py  test_service_pull_script.py  test_services.py  test_services_checkpoint_download.py  test_services_core.py  test_submit.py  test_submit_worker_image.py  test_tables.py  test_version.py
tests/orchestrator/: _worker_endpoints_test_helpers.py  test_assignment_service.py  test_config.py  test_config_infisical.py  test_config_slurm_clusters.py  test_db.py  test_frontend_serving.py  test_job_history_service.py  test_job_transitions.py  test_logging.py  test_operator_endpoints.py  test_operator_endpoints_maintenance.py  test_salad_scaler.py  test_sbatch.py  test_scheduler_wiring.py  test_scheduling.py  test_slurm_template.py  test_worker_endpoints.py  test_worker_endpoints_api.py  test_worker_endpoints_lifecycle.py  test_worker_endpoints_reaper.py  test_worker_image_catalog_endpoint.py  test_worker_image_config.py  test_worker_image_identity.py  test_worker_image_queue_diagnostics.py
tests/scripts/: test_check_infisical_secrets.py
ui/: __init__.py  dashboard.py  requirements.txt  test_dashboard.py
worker-internals/: index.html
(+76 files in other folders)
