[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "relaymd"
version = "0.1.17"
requires-python = ">=3.11"
dependencies = [
    "relaymd-core",
    "relaymd-api-client",
    "fastapi>=0.111",
    "uvicorn[standard]",
    "apscheduler",
    "sqlmodel>=0.0.18",
    "aiosqlite",
    "alembic",
    "pydantic-settings[yaml]>=2.0",
    "orjson",
    "structlog",
    "jinja2",
    "itsdangerous>=2.0",
    "python-multipart>=0.0.7",
    "httpx",
    "boto3",
    "infisical-python>=2.0,<2.2",
    "typer",
    "rich>=13.0",
    "pyyaml",
]

[project.scripts]
relaymd = "relaymd.cli.__main__:app"
relaymd-orchestrator = "relaymd.orchestrator.main:start"
relaymd-dashboard-proxy = "relaymd.dashboard_proxy_main:start"

[tool.uv.sources]
relaymd-core = { workspace = true }
relaymd-worker = { workspace = true }
relaymd-api-client = { workspace = true }

[tool.uv.workspace]
members = [
    "packages/relaymd-core",
    "packages/relaymd-worker",
    "packages/relaymd-api-client",
]

[dependency-groups]
dev = [
    "relaymd-worker",
    "pytest>=8",
    "pytest-cov",
    "pytest-asyncio",
    "httpx",
    "respx",
    "moto[s3]",
    "freezegun",
    "ruff",
    "pyright",
    "pyinstaller",
    "openapi-python-client",
    "pytest-env",
    "mkdocs-material",
]

[tool.pytest_env]
AXIOM_TOKEN = "test-token"

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["packages/relaymd-api-client/src/relaymd_api_client"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib --cov=relaymd --cov=packages/relaymd-core/src/relaymd --cov-report=term-missing --cov-report=xml"
pythonpath = [
    "src",
    "packages/relaymd-core/src",
]

[tool.coverage.run]
branch = true
relative_files = true
omit = ["*/tests/*", "*/__main__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 0

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"
extraPaths = [
    "src",
    "packages/relaymd-core/src",
]
exclude = ["build/"]

[tool.hatch.build.targets.wheel]
packages = ["src/relaymd"]
