[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "relaymd"
version = "0.2.1"
requires-python = ">=3.11"
dependencies = [
    "relaymd-core",
    "relaymd-api-client",
    "fastapi>=0.111",
    "uvicorn[standard]",
    "apscheduler",
    "sqlmodel>=0.0.18",
    "aiosqlite",
    "alembic",
    "pydantic-settings[yaml]>=2.0",
    "orjson",
    "structlog",
    "jinja2",
    "itsdangerous>=2.0",
    "python-multipart>=0.0.7",
    "httpx",
    "boto3",
    "infisical-python>=2.0,<2.2",
    "typer",
    "rich>=13.0",
    "pyyaml",
]

[project.scripts]
relaymd = "relaymd.cli.__main__:app"
relaymd-orchestrator = "relaymd.orchestrator.main:start"
relaymd-dashboard-proxy = "relaymd.dashboard_proxy_main:start"

[tool.uv.sources]
relaymd-core = { workspace = true }
relaymd-worker = { workspace = true }
relaymd-api-client = { workspace = true }

[tool.uv.workspace]
members = [
    "packages/relaymd-core",
    "packages/relaymd-worker",
    "packages/relaymd-api-client",
]

[dependency-groups]
dev = [
    "relaymd-worker",
    "pytest>=8",
    "pytest-xdist",
    "pytest-cov",
    "pytest-asyncio",
    "httpx",
    "respx",
    "moto[s3]",
    "freezegun",
    "ruff",
    "pyright",
    "pyinstaller",
    "openapi-python-client",
    "pytest-env",
    "mkdocs-material",
]

[tool.pytest_env]
AXIOM_TOKEN = "test-token"
RELAYMD_DISABLE_AXIOM_UPLOAD = "1"

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["packages/relaymd-api-client/src/relaymd_api_client"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C90", "PL"]

# Legacy exemptions — gradual ratchet.
# When you refactor a file below the thresholds, remove its entry here.
# Do NOT add new files to this list; fix violations in new code instead.
[tool.ruff.lint.per-file-ignores]
# packages/relaymd-core
"packages/relaymd-core/src/relaymd/core_secret_management.py" = ["PLR0913"]
"packages/relaymd-core/src/relaymd/storage/client.py" = ["PLR0913", "PLR2004"]
"packages/relaymd-core/tests/test_client.py" = ["PLR1711", "PLR2004"]
# packages/relaymd-worker
"packages/relaymd-worker/src/relaymd/worker/bootstrap.py" = ["PLW0603"]
"packages/relaymd-worker/src/relaymd/worker/gateway.py" = ["PLR0913", "PLR2004"]
"packages/relaymd-worker/src/relaymd/worker/heartbeat.py" = ["PLR0913", "PLR2004"]
"packages/relaymd-worker/src/relaymd/worker/job_execution.py" = ["PLR0911", "PLR0913"]
"packages/relaymd-worker/src/relaymd/worker/logging.py" = ["PLC0415", "PLW0603"]
"packages/relaymd-worker/src/relaymd/worker/main.py" = ["C901", "PLC0415", "PLR0912", "PLR0913", "PLR0915"]
# src/relaymd/cli
"src/relaymd/cli/__main__.py" = ["PLC0415", "PLR0913"]
"src/relaymd/cli/commands/jobs.py" = ["PLR0912"]
"src/relaymd/cli/commands/service.py" = ["C901", "PLR0912"]
"src/relaymd/cli/commands/submit.py" = ["PLR0913", "PLR2004"]
"src/relaymd/cli/config.py" = ["C901", "PLC0415"]
"src/relaymd/cli/context.py" = ["PLC0415", "PLW0603"]
"src/relaymd/cli/remote_dispatch.py" = ["PLR0911"]
"src/relaymd/cli/services/submit_service.py" = ["C901", "PLR2004"]
# src/relaymd/orchestrator
"src/relaymd/dashboard_proxy_main.py" = ["PLC0415"]
"src/relaymd/orchestrator/config.py" = ["C901", "PLC0415", "PLR0915"]
"src/relaymd/orchestrator/db.py" = ["PLW0603"]
"src/relaymd/orchestrator/logging.py" = ["PLC0415", "PLW0603"]
"src/relaymd/orchestrator/main.py" = ["C901", "PLC0207", "PLR0911"]
"src/relaymd/orchestrator/routers/jobs_operator.py" = ["PLR2004"]
"src/relaymd/orchestrator/salad_scaler.py" = ["PLR0913"]
"src/relaymd/orchestrator/services/job_history_service.py" = ["C901", "PLR0912", "PLR0913"]
"src/relaymd/orchestrator/services/job_transitions.py" = ["PLR0913"]
"src/relaymd/orchestrator/services/slurm_provisioning_service.py" = ["C901", "PLC0415", "PLR0911", "PLR0912", "PLR0915", "PLR2004", "PLW0603"]
"src/relaymd/orchestrator/services/worker_lifecycle_service.py" = ["C901", "PLR0912", "PLR0915"]
"src/relaymd/orchestrator/slurm.py" = ["PLR0913", "PLR2004"]
"src/relaymd/orchestrator/tailscale.py" = ["PLR0911"]
"src/relaymd/settings_sources.py" = ["C901", "PLR0912"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pylint]
max-args = 5
max-statements = 50

[tool.pytest.ini_options]
addopts = "--import-mode=importlib --cov=relaymd --cov=packages/relaymd-core/src/relaymd --cov-report=term-missing --cov-report=xml"
pythonpath = [
    "src",
    "packages/relaymd-core/src",
]

[tool.coverage.run]
branch = true
relative_files = true
omit = ["*/tests/*", "*/__main__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 0

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"
extraPaths = [
    "src",
    "packages/relaymd-core/src",
]
exclude = ["build/"]

[tool.hatch.build.targets.wheel]
packages = ["src/relaymd"]
